<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_product"
        android:enabled="true"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/product"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/hospital"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>