<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/please_select_your_coverage_rm"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spnCoverage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/payment_mode"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/payment_mode"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/btn_black5_curve"
                android:enabled="false"
                android:padding="4dp"
                android:text="Monthly"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/total_year"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/total_year"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/btn_black5_curve"
                android:enabled="false"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/expire_date"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/expire_date"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/btn_black5_curve"
                android:enabled="false"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/monthly_pay_premium"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/monthly_pay"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/btn_black5_curve"
                android:enabled="false"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:minHeight="40dp" />

            <Button
                android:id="@+id/btn_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purchase" />

        </LinearLayout>
    </ScrollView>
</layout>