<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/action_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/forgot_password" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingTop="32dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:tint="@color/colorPrimary"
                app:srcCompat="@drawable/ic_lock_outline_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/forgot_password_"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/we_just_need_yout_registered_email_address_nto_send_you_password_reset"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="12sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_wrapper"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:textColorHint="@color/colorPrimary">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingTop="4dp"
                    android:text="kahyee@gmail.com"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/reset"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/btn_color_primary_curve"
                android:gravity="center"
                android:text="@string/reset_password"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>