<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/action_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/product" />
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/accident"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/btn_black30_curve_right"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:background="@drawable/btn_red_oval"
                    android:padding="12dp"
                    android:src="@drawable/accident"
                    android:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/accident_protection"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/critical_ill"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginLeft="40dp"
                android:background="@drawable/btn_black30_curve_left"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/critical_illness_protection"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:background="@drawable/btn_red_oval"
                    android:padding="18dp"
                    android:src="@drawable/ill"
                    android:tint="@color/white" />
            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/life"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/btn_black30_curve_right"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:background="@drawable/btn_red_oval"
                    android:padding="12dp"
                    android:src="@drawable/life"
                    android:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/medical_protection"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>